fix: fix spacing of items in admin edit form

--- a/app/src/molecules/admin_viewlandlord/admin_viewlandlord.css
+++ b/app/src/molecules/admin_viewlandlord/admin_viewlandlord.css
@@ -4,6 +4,13 @@
   margin: 0;
 }
 
+input {
+    height: 30px;
+}
+
+.phone-number-input {
+    white-space: nowrap;
+}
 
 .modal-dialog {
     display: flex;
